--- a/hw3/h3.html
+++ b/hw3/h3.html
@@ -12,10 +12,10 @@
 <body>
         <div class="top">
                 <ul class="ul-section menu">
-                        <li><a href="">Home</a></li>
-                        <li><a href="">About</a></li>
-                        <li><a href="">Service</a></li>
-                        <li><a href="">Contact</a></li>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Service</a></li>
+                        <li><a href="#">Contact</a></li>
                 </ul>
         </div>
         <div class="gray-section">
@@ -64,15 +64,15 @@
 
         <div class="bot">
                 <ul class="ul-section footer-l">
-                        <li><a href="">Home</a></li>
-                        <li><a href="">About</a></li>
-                        <li><a href="">Contact</a></li>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Contact</a></li>
                 </ul>
 
                 <ul class="ul-section footer-r">
-                        <li><a href="">Facebook</a></li>
-                        <li><a href="">Twitter</a></li>
-                        <li><a href="">Vimeo</a></li>
+                        <li><a href="https://www.instagram.com/eostagram____/">Instagram</a></li>
+                        <li><a href="https://www.linkedin.com/in/huanyu-doris-jiang-419437191/">LinkedIn</a></li>
+                        <li><a href="#">Vimeo</a></li>
                 </ul>
 
         </div>
