--- a/hw5/namecard.html
+++ b/hw5/namecard.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Contacts</title>
     <link rel="stylesheet" href="./style.css" />
+    <script async src="./namecard.js"></script>   
+     
   </head>
-  <script src="./namecard.js"></script>
 </html>
